Remove static initializers from symbols